fix: modal icon was in wrong position. `title` and `description` defaults being set by mistake

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,7 +1,3 @@
-h3 {
-  margin-top: 0.3rem;
-}
-
 .sbui-modal-container {
   @apply fixed z-50 inset-0 overflow-y-auto;
 }
